--- a/latihan-navbar/index.html
+++ b/latihan-navbar/index.html
@@ -13,9 +13,12 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Asimovian&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Asimovian&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans+JP:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -32,7 +35,7 @@
       <nav>
         <ul>
           <div class="HOME">
-          <li><a href=""></a>Home</li>
+            <li><a href=""></a>Home</li>
           </div>
           <li><a href=""></a>Services</li>
           <li><a href=""></a>About me</li>
@@ -45,46 +48,92 @@
         <i class="fa-solid fa-bars-staggered fa-xl"></i>
       </div>
     </header>
-    <section id="hero">
-      <div class="container">
-        <div class="left-text">
-          <h4>Hi I am</h4>
-          <p>Mahmood Fazile</p>
-          <h1 class="Rafka-99">UI/UX designer</h1>
-          <div class="container-12">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-github"></i>
-            <i class="fa-brands fa-discord"></i>
-            <i class="fa-brands fa-figma"></i>
-            <i class="fa-brands fa-google"></i>
+    <main>
+      <section id="hero">
+        <div class="container">
+          <div class="left-text">
+            <h4>Hi I am</h4>
+            <p>Mahmood Fazile</p>
+            <h1 class="Rafka-99">UI/UX designer</h1>
+            <div class="container-2">
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-github"></i>
+              <i class="fa-brands fa-discord"></i>
+              <i class="fa-brands fa-figma"></i>
+              <i class="fa-brands fa-google"></i>
+            </div>
+            <div class="Gp-1">
+              <button class="Button-1">Hire me</button>
+              <button class="kaymay-1">Download CV</button>
+              <div class="box-ratting">
+                <div class="port-1">
+                  <p class="paragraf-1">5+</p>
+                  <p class="paragraf-2">Experiences</p>
+                </div>
+                <span class="line"></span>
+                <div class="port-1">
+                  <p class="paragraf-1">20+</p>
+                  <p class="paragraf-2">Project done</p>
+                </div>
+                <span class="line"></span>
+                <div class="port-1">
+                  <p class="paragraf-1">80+</p>
+                  <p class="paragraf-2">Happy Clients</p>
+                </div>
+              </div>
+            </div>
           </div>
-          <button class="Mampuak-11">Hire me</button>
-          <button class="kaymay-1">Download CV</button>
-          <div class="unibakwan">
-            <div class="port-1">
-              <p>5+</p>
-              <p>Experiences</p>
-            </div>
-            <span class="line"></span>
-            <div class="port-1">
-              <p>20+</p>
-              <p>Project done</p>
-            </div>
-            <span class="line"></span>
-            <div class="port-1">
-              <p>80+</p>
-              <p>Happy Clients</p>
-            </div>
-          </div>
-        </div>
 
-        <div class="right-img">
-          <img src="./Photo.png" alt="" />
+          <div class="right-img">
+            <img src="./setengah_badan_denga-removebg-preview.png" alt="" />
+          </div>
         </div>
-      </div>
-    </section>
-    <main></main>
+      </section>
+
+      <section id="Services">
+        <div class="container-service">
+          <div class="category">
+            <h3>Services</h3>
+          </div>
+          <p class="paragraf-services">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+          <div class="box-card-service">
+            <div class="card-services">
+              <i class="fa-solid fa-users"></i>
+              <h1 class="H1-services">App Design</h1>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+            <div class="card-services">
+              <i class="fa-solid fa-users"></i>
+              <h1 class="H1-services">App Design</h1>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+            <div class="card-services">
+              <i class="fa-solid fa-users"></i>
+              <h1 class="H1-services">App Design</h1>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+            <div class="card-services">
+              <i class="fa-solid fa-users"></i>
+              <h1 class="H1-services">App Design</h1>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+            <div class="card-services">
+              <i class="fa-solid fa-users"></i>
+              <h1 class="H1-services">App Design</h1>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+            <div class="card-services">
+              <i class="fa-solid fa-users"></i>
+              <h1 class="H1-services">App Design</h1>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
