--- a/latihan-navbar/index.html
+++ b/latihan-navbar/index.html
@@ -133,6 +133,18 @@
           </div>
         </div>
       </section>
+
+      <section id="AboutMe">
+         <div class="container-service">
+          <div class="category">
+            <h3>About Me</h3>
+          </div>
+          <p class="paragraf-about">
+          User Interface and User Experience and Also video editing 
+          </p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
